# MiniCraft

./: CMakeLists.txt
assets/shaders/: basic.vert
include/: Block.h  BlockManager.h  BlockType.h  Camera.h  Camera3D.h  Chunk.h  Globals.h  Shader.h  TextureManager.h
src/: Block.cpp  BlockManager.cpp  Camera.cpp  Camera3D.cpp  Chunk.cpp  Globals.cpp  Shader.cpp  TextureManager.cpp  main.cpp
